@@ -2,6 +2,10 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- Fix auto suggested ipv6 address.
+
+- add wildcard information text for dns forwarder
+
 - add Farenheit support for system temperatures.
 
 - add kernel patch for vr(4) lockups after link flaps (e.g. on ALIX boards)
